[project]
name = "proto-crawler-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shimo8810", email = "shimo.8810@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
]
